<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.activities.SystemLoginActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/loginTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:paddingBottom="50dp"
                android:text="@string/admin"
                android:textColor="@color/app_color"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/adminEmailLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/adminEmailLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/admin"
                app:endIconDrawable="@drawable/ic_baseline_cancel_24"
                app:endIconMode="clear_text"
                app:endIconTint="@color/red"
                app:hintAnimationEnabled="true"
                app:layout_constraintBottom_toTopOf="@id/adminPasswordLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loginTitle"
                app:startIconDrawable="@drawable/ic_baseline_account_box_signin_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/admin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/adminPasswordLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/password"
                app:endIconMode="password_toggle"
                app:hintAnimationEnabled="true"
                app:layout_constraintBottom_toTopOf="@id/switchPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/adminEmailLayout"
                app:startIconDrawable="@drawable/baseline_security_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/adminPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/remember"
                app:layout_constraintStart_toStartOf="@id/adminPasswordLayout"
                app:layout_constraintTop_toBottomOf="@id/adminPasswordLayout" />

            <Button
                android:id="@+id/resetPasswordBtn"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/did_you_forget_your_password"
                android:textAllCaps="false"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@id/switchPassword"
                app:layout_constraintTop_toBottomOf="@+id/adminPasswordLayout" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signIn"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:backgroundTint="@color/app_color"
                android:padding="14dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/switchPassword" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</layout>