<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.activities.RegistrationActivity">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/registerTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="70dp"
                    android:paddingBottom="20dp"
                    android:text="@string/register"
                    android:textColor="@color/app_color"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/personImage"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/personImage"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginBottom="15dp"
                    android:src="@drawable/applogo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/personName"
                    app:layout_constraintTop_toBottomOf="@id/registerTitle" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/personName"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="16dp"
                    android:hint="@string/what_do_people_call_you"
                    app:endIconDrawable="@drawable/ic_baseline_cancel_24"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/app_color"
                    app:hintAnimationEnabled="true"
                    app:layout_constraintBottom_toTopOf="@id/personPhone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/personImage"
                    app:startIconDrawable="@drawable/ic_baseline_account_box_signin_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fullNamePerson"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/personPhone"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="16dp"
                    android:hint="@string/phone_number"
                    app:endIconDrawable="@drawable/ic_baseline_cancel_24"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/app_color"
                    app:helperText="@string/phone_format_xxx_xxx_xxxx"
                    app:helperTextEnabled="true"
                    app:hintAnimationEnabled="true"
                    app:layout_constraintBottom_toTopOf="@id/personEmail"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/personName"
                    app:startIconDrawable="@drawable/baseline_phone_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phoneNumberPerson"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxEms="11"
                        android:maxLength="11"
                        android:inputType="phone" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/personEmail"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="16dp"
                    android:hint="@string/email_address"
                    app:endIconDrawable="@drawable/ic_baseline_cancel_24"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/red"
                    app:hintAnimationEnabled="true"
                    app:layout_constraintBottom_toTopOf="@id/personPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/personPhone"
                    app:startIconDrawable="@drawable/baseline_email_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailPerson"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/personPassword"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="16dp"
                    android:hint="@string/password"
                    app:endIconMode="password_toggle"
                    app:hintAnimationEnabled="true"
                    app:layout_constraintBottom_toTopOf="@id/personPasswordConfirm"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/personEmail"
                    app:startIconDrawable="@drawable/baseline_security_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordPerson"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:inputType="numberPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/personPasswordConfirm"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="16dp"
                    android:hint="@string/confirm_password"
                    app:endIconDrawable="@drawable/ic_baseline_cancel_24"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/app_color"
                    app:hintAnimationEnabled="true"
                    app:layout_constraintBottom_toTopOf="@id/signUp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/personPassword"
                    app:startIconDrawable="@drawable/ic_baseline_edit_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/confirmPasswordPerson"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:inputType="numberPassword" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/signUp"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="50dp"
                    android:backgroundTint="@color/app_color"
                    android:padding="14dp"
                    android:text="@string/register"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/personPasswordConfirm" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </FrameLayout>

</layout>